deploy/overlays/prod/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: matterbuild
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "60"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: ${AWS_SSL_CERT_ARN}
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
    service.beta.kubernetes.io/aws-load-balancer-type: elb
spec:
  ports:
  - port: 8080
    $patch: delete
  - name: mb-api
    port: 443
  type: LoadBalancer
